# OpenCC

src/: CMakeLists.txt
src/tools/: CMakeLists.txt  OpenCC_Jni.cpp
